--- a/src/styles/section.css
+++ b/src/styles/section.css
@@ -32,6 +32,16 @@ section {
     font-weight: 700;
 }
 
+a {
+    text-decoration: none;
+    color: black;
+    transition: 0.2s;
+}
+
+a:hover {
+    color: rgb(32, 201, 201);
+}
+
 .author {
     font-size: 14px;
     color: #555;
@@ -57,4 +67,16 @@ section {
     word-wrap: break-word;
     line-height: 1.2em;
     height: 6em;
+}
+
+.curBtn {
+    border: none;
+    padding: 5px 7px;
+    border-radius: 5px;
+    background-color: rgba(32, 201, 201, 0.2);
+    transition: 0.2s;
+}
+
+.curBtn:hover {
+    background-color: rgba(32, 201, 201, 0.4);
 }
