--- a/src/styles/section.css
+++ b/src/styles/section.css
@@ -1,5 +1,7 @@
 .result-wrapper {
-    padding: 30px 45px;
+    padding: 30px 0;
+    max-width: 1400px;
+    margin: 0 auto;
 }
 
 .keyword-title {
