--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -36,7 +36,8 @@ main {
     padding-top: 30px;
 }
 .input-wrapper {
-    padding: 0 45px;
+    max-width: 1400px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
 }
