--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,21 +14,32 @@ body,
 }
 
 /* header */
-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.header-wrapper {
     position: sticky;
     top: 0;
     background-color: rgba(255, 255, 255, 0.2);
     backdrop-filter: blur(20px) saturate(80%);
-    padding: 13px 15px;
     border-bottom: 1px solid rgb(224, 224, 224);
+}
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 13px 45px;
 }
 
 .logo {
     font-family: "Knewave", cursive;
     cursor: pointer;
+}
+
+.darkmode {
+    background: none;
+    border: none;
+    padding: 0;
+    font-size: 20px;
 }
 
 /* input */
@@ -40,6 +51,8 @@ main {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
+    box-sizing: border-box;
+    padding: 0 45px;
 }
 
 input {
@@ -48,7 +61,7 @@ input {
     margin: 0 auto;
     font-size: 18px;
     padding: 5px 8px;
-    border: 2px solid rgb(209, 209, 209);
+    border: 2px solid #d2f4f4;
     border-radius: 5px;
     transition: 0.2s;
 }
