--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,6 +1,7 @@
 @import "./reset.css";
 @import "./loader.css";
 @import "./section.css";
+@import "./theme.css";
 
 html {
     font-family: "Nanum Gothic", sans-serif;
@@ -13,13 +14,18 @@ body,
     min-height: 100%;
 }
 
+body {
+    background-color: var(--background);
+    color: var(--font-color);
+}
+
 /* header */
 .header-wrapper {
     position: sticky;
     top: 0;
-    background-color: rgba(255, 255, 255, 0.2);
+    background-color: var(--header-background);
     backdrop-filter: blur(20px) saturate(80%);
-    border-bottom: 1px solid rgb(224, 224, 224);
+    border-bottom: 1px solid var(--border-color);
 }
 header {
     display: flex;
@@ -42,6 +48,10 @@ header {
     font-size: 20px;
 }
 
+.darkmode:focus {
+    outline: none;
+}
+
 /* input */
 main {
     padding-top: 30px;
@@ -61,14 +71,16 @@ input {
     margin: 0 auto;
     font-size: 18px;
     padding: 5px 8px;
-    border: 2px solid #d2f4f4;
+    background-color: var(--input-background);
+    border: 2px solid var(--input-background);
+    box-sizing: border-box;
     border-radius: 5px;
     transition: 0.2s;
 }
 
 input:focus {
     outline: none;
-    border: 2px solid rgb(32, 201, 201);
+    border: 2px solid var(--focus-point-color);
 }
 
 .cur-keywords {
