--- a/src/styles/section.css
+++ b/src/styles/section.css
@@ -7,7 +7,7 @@
 
 .keyword-title {
     font-size: 18px;
-    padding-bottom: 15px;
+    padding-bottom: 17px;
 }
 
 section {
@@ -34,17 +34,17 @@ section {
 
 a {
     text-decoration: none;
-    color: black;
+    color: var(--font-color);
     transition: 0.2s;
 }
 
 a:hover {
-    color: rgb(32, 201, 201);
+    color: var(--focus-point-color);
 }
 
 .author {
     font-size: 14px;
-    color: #555;
+    color: var(--not-point-color);
     margin: 7px 0;
 
     overflow: hidden;
@@ -73,12 +73,12 @@ a:hover {
     border: none;
     padding: 5px 7px;
     border-radius: 5px;
-    background-color: #d2f4f4;
+    background-color: var(--point-color);
     transition: 0.2s;
 }
 
 .curBtn:hover {
-    background-color: #7fd8d8;
+    background-color: var(--focus-point-color);
 }
 
 @media screen and (min-width: 840px) {
