--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -70,6 +70,7 @@ input {
     width: 300px;
     margin: 0 auto;
     font-size: 18px;
+    color: var(--font-color);
     padding: 5px 8px;
     background-color: var(--input-background);
     border: 2px solid var(--input-background);
