--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -82,7 +82,8 @@ main {
 
 input {
     font-family: "Nanum Gothic", sans-serif;
-    width: 300px;
+    max-width: 300px;
+    width: 80%;
     margin: 0 auto;
     font-size: 18px;
     color: var(--font-color);
