--- a/src/styles/section.css
+++ b/src/styles/section.css
@@ -19,6 +19,12 @@ section {
     margin-bottom: 25px;
 }
 
+@media screen and (max-width: 400px) {
+    .card > img {
+        display: none;
+    }
+}
+
 .thumbnail {
     margin-right: 15px;
 }
